slightly more detailed news:
svn log svn://svn.r-forge.r-project.org/svnroot/multitable

*************************************
**				   **
**	multitable version 1.5	   **
**				   **
*************************************

NEW FEATURES

	new function, simple.scale, that provides
	a version of the scale function that treats
	matrices as whole variables rather than
	as collections of variables.

	new vignette, which matches the journal
	of statistical software paper.

	added a read.matrix function for loading
	in data as a matrix (instead of as a
	data frame).  useful to keep track of
	whether a table of data should be added
	to a data list as a 2-dimensional
	variable or as a set of 1-dimensional 
	variables.
	

BUG FIXES

	fixed bug that led to dimnames being
	inconsistent amongst variables in a data
	list.  now make.dimnames.consistent 
	is in the right places.  test added.

	fixed bug #2008: 'incompatible dimensions
	in y' error message called inappropriately

	fixed bug #2159: 'dlapply failing where it
	shouldn't'.  test added.

*************************************
**				   **
**	multitable version 1.4	   **
**				   **
*************************************

BUG FIXES

	the data.list print method in version 1.3 
	printed unnecessary information about the
	dimensions of replication.  this has been
	fixed.

	some fourth-corner problem data sets
	without dimnames were failing to be 
	created with data.list. the reason was
	because the condition indicating that
	dimnames should be matched (to produce
	the relationship structure) was TRUE,
	even though dimnames were not present.
	this has been fixed and many tests
	added.

	some silly unit tests were removed.

*************************************
**				   **
**	multitable version 1.3	   **
**				   **
*************************************

NEW FEATURES

	added two new functions, dropdl and dropl,
	that drop data list dimensions with only
	one level and null list elements
	respectively.
