@@ -6,17 +6,7 @@ Version: 1.5
 Date: 2012-07-10
 Author: Steve C Walker
 Maintainer: Steve C Walker <steve.walker@utoronto.ca>
-Description: Many data sets do not easily fit into a single data frame.
-    Storing such data in a single data frame often results in either large
-    numbers of meaningless missing values or storage of redundant information;
-    yet storing them in multiple data frames often results in long
-    difficult-to-read workflows.  The multitable package introduces a new data
-    object called a data.list, which organises several data tables as a single
-    R object.  The primary goal of multitable is to provide a more intuitive
-    framework for manipulating multiple-table data in R.  As data.lists can be
-    coerced to data.frames, they can be used with all R functions that accept
-    an object that is coercible to a data.frame (e.g. lm; plot; lme; and many
-    more).
+Description: Data frames are integral to R.  They provide a standard format for passing data to model-fitting and plotting functions, and this standard makes it easier for experienced users to learn new functions that accept data as a single data frame.  Still, many data sets do not easily fit into a single data frame; data sets in ecology with a so-called fourth-corner problem provide important examples.  Manipulating such inherently multiple-table data using several data frames can result in long and difficult-to-read workflows.  We introduce the R multitable package to provide new data storage objects called data.list objects, which extend the data.frame concept to explicitly multiple-table settings.  Like data frames, data lists are lists of variables stored as vectors; what is new is that these vectors have dimension attributes that make accessing and manipulating them easier.  As data.list objects can be coerced to data.frame objects, they can be used with all R functions that accept an object that is coercible to a data.frame.
 Suggests:
     MASS,
     lattice,
