@@ -138,7 +138,7 @@ make.match.dimids <- function(x, dimids){
 	# see the comments for get.input.names
 	# for more detail. 
 	innames <- lapply(x, get.input.names)
-	ulinnames <- unlist(innames, recursive=FALSE)
+	ulinnames <- unlist(innames, recursive = FALSE)
 	
 	# get a logical vector indicating which elements
 	# in x have non-null dimnames.
@@ -147,6 +147,10 @@ make.match.dimids <- function(x, dimids){
 
 	# above still buggy so new attempt
 	notnullnames <- !(any(sapply(innames,is.null)) || any(sapply(ulinnames,is.null)))
+	
+	# get the dimensions of the elements in x
+	indims <- lapply(x, get.input.dims)
+	dimlengths <- sapply(indims, length)
 	
 	#if(all(notnullnames) && !is.null(ulinnames)){
 	# fixed a BUG here:  the !is.null(ulinnames) is not necessary,
@@ -157,7 +161,13 @@ make.match.dimids <- function(x, dimids){
 	# ulinnames) or get.input.names (when creating innames) has 
 	# dropped some elements and this means that some of the innames 
 	# were NULL, which is what we want to avoid in this condition.
-	if(notnullnames && (length(x) == length(ulinnames))){ # removed all() around notnullnames...now handled in the defnition of notnullnames
+	#if(notnullnames && (length(x) == length(innames))){
+	#if(notnullnames && (length(x) == length(ulinnames))){# removed all() around notnullnames...now handled in the defnition of notnullnames
+	# BUG FIX in the following if:  sum(dimlenghts) replaces length(x).
+	# this fix is obvious in hindsight...of course we want the total
+	# number of dimname vectors to equal the total number of dimensions,
+	# NOT the total number of variables.
+	if(notnullnames && (sum(dimlengths) == length(ulinnames))){
 		# 2a. this condition is evaluated when the dimensions
 		# of the elements in x are 'fully named'
 		# therefore, this is where the algorithm tries
@@ -173,7 +183,10 @@ make.match.dimids <- function(x, dimids){
 			stop(
 "Resulting data list invalid:
 some variables do not share any
-dimensions with other variables")
+dimensions with other variables
+(HINT: check the names and dimnames
+of the objects being combined 
+into a data list)")
 
 		# create a list with one element for each in x,
 		# with vector elements giving indices for each of
@@ -203,11 +216,8 @@ dimensions with other variables")
 		# matching is attempted using the lengths of the
 		# dimensions of the elements in x.
 		 
-		# get the dimensions of the elements in x
-		indims <- lapply(x, get.input.dims)
-		
 		# find out which one is fully replicated (wfr)
-		wfr <- which.max(sapply(indims, length))
+		wfr <- which.max(dimlengths)
 		
 		# get a vector of the sizes of the data list 
 		# dimensions (compare with indims.wfr in the 
