@@ -1,5 +1,5 @@
 data.list <-
-function(...,dimids,match.dimids,check=TRUE,drop=TRUE,unique=TRUE){
+function(..., dimids, match.dimids, check = TRUE, drop = TRUE, unique = TRUE){
 	
 	# create names to give to unnamed arguments in ...
 	# based on the names of the objects passed to those
@@ -15,10 +15,10 @@ function(...,dimids,match.dimids,check=TRUE,drop=TRUE,unique=TRUE){
 	names(x) <- vnames
 	
 	# convert x (which is created from ...) to a data list
-	x <- as.data.list(x,dimids,match.dimids,check=check,drop=drop)
+	x <- as.data.list(x, dimids, match.dimids, check = check, drop = drop)
 
 	# process the names
-	names(x) <- make.names(names(x),unique=unique)
+	names(x) <- make.names(names(x), unique = unique)
 
 	return(x)
 }
